Started working with ? and ! switching, they are fine now except random spaces are between repeating !'s